# lab5_computer_vision_2021_unipd

./: CMakeLists.txt  PanoramicImage.cpp  PanoramicImage.h  lab5.cpp  panoramic_utils.h
